# Helmholtz-Cage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SETUP.md  old_gtk_path.txt  requirements.txt
Python/: arduino.py  arduino_code.ino  control.py  dynamic_sim.py  globals.py  gui.py  logger.py  main.py  main.py.txt  sensor_data_check.xls  util.py
Python/TestScripts/: pid_sim.py
include/: MyFrame.h  utils.h
mathplot/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mathplot.cpp  mathplot.h
mathplot/samples/: Makefile  cmake_install.cmake
mathplot/samples/sample1/: Makefile  cmake_install.cmake  mpSample1
mathplot/samples/sample2/: Makefile  cmake_install.cmake  mpSample2
mathplot/samples/sample3/: Makefile  cmake_install.cmake  mpSample3
scripts_and_testing/csv_func_test/: test.csv
scripts_and_testing/graph_func_test/: graph_data.cpp
src/: MyFrame.cpp  arduino.py  control.py  globals.py  gui.py  logger.py  main.cpp  main.py  sim.csv  util.py  utils.cpp  verification_mag_field.m
